- Normalized devices info into a separate table - Similar to the service, rename all instances of DeviceID to DeviceId

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,4 +4,4 @@ DisplayMode: Normal
 Author: Ussama Naal
 AuthorUrl: https://www.linkedin.com/UssamaNaal
 Type: Shiny
-Tags: mongolite leaflet dplyr
+Tags: mongolite leaflet dplyr ggplot2
